# smart-travel-planner

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  z-to-do-further.md
.github/workflows/: ci.yml
artifacts/: model.joblib  results.csv
data/: dests_1200.csv
notebooks/: ml_training.ipynb
travel-dest-backend/: .env.example  main.py
travel-dest-backend/app/: __init__.py  main.py
travel-dest-backend/app/agent/: graph.py  prompts.py  state.py  tool_registry.py
travel-dest-backend/app/api/: __init__.py  dependencies.py
travel-dest-backend/app/core/: __init__.py  config.py  logging.py  security.py
travel-dest-backend/app/db/: __init__.py  crud.py  models.py  session.py
travel-dest-backend/app/schemas/: __init__.py  agent.py  auth.py  rag.py  tools.py
travel-dest-backend/app/services/: __init__.py  azure_openai.py  llm_service.py  ml_service.py  rag_service.py  weather_service.py
travel-dest-backend/app/tools/: classify_travel_style.py  live_conditions.py  retrieve_destinations.py
travel-dest-backend/rag/: __init__.py  chunk_documents.py  clean_documents.py  destinations.py  embed_and_store.py  fetch_wikivoyage.py  pgvector_store.py
travel-dest-backend/sql/: init_pgvector.sql
travel-dest-backend/tests/: test_agent_e2e.py  test_chunk_documents.py  test_config.py  test_embed_and_store.py  test_tool_schemas.py  test_tools.py
travel-dest-frontend/: .env.example  index.html  package-lock.json  package.json
travel-dest-frontend/src/: App.tsx  main.tsx
(+57 files in other folders)
